# simple-assistant

./: .env.template  .gitignore  README.md  \  app.py  bot.py  config.py  cpy  google_output.txt  hypr_control.sh  oldbot.py  pyproject.toml  requeriments.txt  requirements.txt  requirements_BACKUP_11582.txt  requirements_REMOTE_11582.txt  run_tests.py
db/: Dockerfile  README.md  history.py  schema.sql
handlers/: callbacks.py  commands.py  media.py  messages.py
services/: conversation.py  gemini.py  generate.py  history_manager.py  ocr.py  ollama.py  ollama_async_shim.py  ollama_core.py  ollama_shared.py  ollama_tools.py  ollama_translation.py  stt.py  tts.py
tests/: test_api.py  test_auth_unit.py  test_cheat_jq.py  test_cheat_retry.py  test_cheat_sh_endpoint.py  test_cheat_tool.py  test_command_guard.py  test_e2e.py  test_messages_unit.py  test_ocr_unit.py  test_search_scrape_unit.py  test_shell_agent.py  test_tool_directives.py  test_web_search_unit.py
tests/unit/: test_history_manager.py  test_history_manager_unittest.py  test_messages_helpers.py  test_ollama_async.py
tests/unit/commands/: test_commands_helpers.py
tests/unit/tools/: test_search_scrape_async.py  test_web_search_async.py
tools/: __init__.py  add_two_numbers.py  agent.py  cheat.py  search_scrape.py  square_root.py  web_search.py
utils/: auth.py  cheat_parser.py  command_guard.py  history_state.py  logger.py  message_chunks.py  tldr.py  tool_directives.py  user_prefs.py
